# YOLOv5-Lite

./: .gitignore  README.md  train.py
cpp_demo/mnn/: .gitignore
cpp_demo/ncnn/: CMakeLists.txt  v5lite-cgo.cpp  v5lite-cgo.h  v5lite-s.cpp  v5lite-s.h
cpp_demo/ncnn/build-aarch64/: build.sh
cpp_demo/ncnn/opencv-4.5.4/aarch64-install/lib/: libopencv_calib3d.so.4.5.4  libopencv_features2d.so.4.5.4  libopencv_flann.so.4.5.4  libopencv_highgui.so.4.5.4  libopencv_imgcodecs.so.4.5.4  libopencv_ml.so.4.5.4  libopencv_objdetect.so.4.5.4  libopencv_photo.so.4.5.4  libopencv_stitching.so.4.5.4  libopencv_video.so.4.5.4  libopencv_videoio.so.4.5.4
cpp_demo/ncnn/opencv-4.5.4/build-aarch64/: .gitignore  build.sh
cpp_demo/ncnn/toolchains/: aarch64-linux-gnu.toolchain.cmake
data/: README.roboflow.txt  crayfish.yaml
utils/: loss.py
